--- a/templates/machiavelli/game_inactive.html
+++ b/templates/machiavelli/game_inactive.html
@@ -4,7 +4,7 @@
 {% load crispy_forms_tags %}
 {% load avatar_tags %}
 {% load machiavelli_tags %}
-{% load condottieri_profiles_tags %}
+{% load stars %}
 
 {% block head_title %}{{ game.title }}{% endblock %}
 
