--- a/templates/machiavelli/game_list_pending.html
+++ b/templates/machiavelli/game_list_pending.html
@@ -2,7 +2,7 @@
 
 {% load i18n %}
 {% load machiavelli_tags %}
-{% load condottieri_profiles_tags %}
+{% load stars %}
 
 {% block head_title %}
 {% blocktrans %}Pending games{% endblocktrans %}
