--- a/templates/machiavelli/hall_of_fame.html
+++ b/templates/machiavelli/hall_of_fame.html
@@ -3,6 +3,8 @@
 {% load i18n %}
 {% load avatar_tags %}
 {% load condottieri_profiles_tags %}
+{% load machiavelli_tags %}
+{% load stars %}
 
 {% block head_title %}{% trans "Hall of Fame" %}{% endblock %}
 
