--- a/templates/machiavelli/log_list.html
+++ b/templates/machiavelli/log_list.html
@@ -6,6 +6,7 @@
 
 <h2>{% trans "Events per season" %}</h2>
 
+{% if season_log %}
 <div class="log_pagination">
 	<span class="step-links">
 		{% if season_log.has_previous %}
@@ -46,6 +47,10 @@
 		{% endif %}
 	</span>
 </div>
+{% else %}
+<p>{% trans "No events have been recorded yet." %}</p>
+{% endif %}
+
 <p><a href="{% url 'machiavelli:show_game' game.slug %}">{% trans "Return to game" %}</a></p>
 
 {% endblock %}
