--- a/templates/machiavelli/orders_actions.html
+++ b/templates/machiavelli/orders_actions.html
@@ -1,6 +1,8 @@
 {% extends 'machiavelli/show_game.html' %}
 
 {% load i18n %}
+{% load static %}
+{% load crispy_forms_tags %}
 
 {% block actions %}
 <div class="action_block">
