--- a/templates/machiavelli/game_base.html
+++ b/templates/machiavelli/game_base.html
@@ -82,8 +82,8 @@
 
 <script src="https://code.jquery.com/jquery-3.7.1.min.js" type="text/javascript"></script>
 <script src="https://code.jquery.com/ui/1.14.1/jquery-ui.min.js" type="text/javascript"></script>
-<script src="{{ STATIC_URL }}js/jquery.mousewheel.js" type="text/javascript"></script>
-<script src="{{ STATIC_URL }}js/jquery.iviewer.min.js" type="text/javascript"></script>
+<script src="{{ STATIC_URL }}machiavelli/js/jquery.mousewheel.js" type="text/javascript"></script>
+<script src="{{ STATIC_URL }}machiavelli/js/jquery.iviewer.min.js" type="text/javascript"></script>
 <script src="{{ STATIC_URL }}machiavelli/js/game-ui.js" type="text/javascript"></script>
 <script type="text/javascript">
 	$( function(){
