--- a/templates/machiavelli/orders_actions.html
+++ b/templates/machiavelli/orders_actions.html
@@ -17,13 +17,13 @@ In the next form, you have to compose an order for each of your units. You canno
 orders. If you want a unit to do nothing, select the "Hold" option for it.
 {% endblocktrans %}</p>
 <p>{% blocktrans %}If you compose an order that break the rules, you should see an error and you will have to fix the order. However, if you compose an impossible order, this unit will hold, instead of carrying out its order. Be careful.{% endblocktrans %}</p>
-{% if order_form %}
+{% if form %}
 <div class="action_form">
 <form action="{% url 'machiavelli:show_game' game.slug %}" method="post" id="order_form">
 {% csrf_token %}
 <div id="emsg">&nbsp;</div>
 <fieldset>
-{{ order_form.as_p }}
+{{ form.as_p }}
 </fieldset>
 <p><input type="submit" value="{% trans "Send" %}" /></p>
 </form>
@@ -37,14 +37,14 @@ orders. If you want a unit to do nothing, select the "Hold" option for it.
 {% for order in sent_orders %}
 <li id="order_{{ order.id }}">{{ order.explain }}
 {% if order.confirmed == 0 %}
-(<a href="{% url "delete-order" game.slug order.id %}" class="delete_order">{% trans "Delete" %}</a>)
+(<a href="{% url 'machiavelli:delete_order' game.slug order.id %}" class="delete_order">{% trans "Delete" %}</a>)
 {% endif %}
 </li>
 {% endfor %}
 </ol>
 {% if player.undoable %}
 <p>{% blocktrans %}If you wish, you can change your orders. To do so, push the following button. Remember that you will need to confirm your actions again; otherwise all your orders will be lost.{% endblocktrans %}</p>
-<form method="POST" action="{% url "undo-actions" game.slug %}">
+<form method="POST" action="{% url 'machiavelli:undo_actions' game.slug %}">
 {% csrf_token %}
 <p><input type="submit" value="{% trans "Change orders" %}" /></p>
 </form>
@@ -56,7 +56,7 @@ orders. If you want a unit to do nothing, select the "Hold" option for it.
 <div class="action_block">
 <h2>{% trans "Taxation" %}</h2>
 <p>{% blocktrans %}You can get some additional ducats through taxation.{% endblocktrans %}</p>
-<p><a href="{% url "taxation" game.slug %}">{% trans "Select areas to tax" %}</a></p>
+<p><a href="{% url 'machiavelli:taxation' game.slug %}">{% trans "Select areas to tax" %}</a></p>
 </div>
 
 {% endif %}
@@ -82,7 +82,7 @@ orders. If you want a unit to do nothing, select the "Hold" option for it.
 <tr>
 <td>{{ c.debt }}</td>
 <td>{{ c.get_season_display }}, {{ c.year }}</td>
-<td><a href="{% url "return-credit" game.slug c.id %}">{% trans "Repay" %}</a></td> 
+<td><a href="{% url 'machiavelli:return_credit' game.slug c.id %}">{% trans "Repay" %}</a></td> 
 </tr>
 {% endfor %}
 </table>
@@ -91,7 +91,7 @@ orders. If you want a unit to do nothing, select the "Hold" option for it.
 
 {% if not done and credit_limit > 0 %}
 <p>{% blocktrans %}You can borrow up to {{ credit_limit }} ducats from a banker or financier. Depending on the term that you choose, you will have to pay a different interest. If you can't or don't repay a loan, something very bad will happen to you and, of course, you won't be able to borrow money anymore.{% endblocktrans %}</p>
-<p><a href="{% url "borrow-money" game.slug %}">{% trans "Ask for a loan" %}</a>.</p>
+<p><a href="{% url 'machiavelli:borrow_money' game.slug %}">{% trans "Ask for a loan" %}</a>.</p>
 {% endif %}
 
 </div>
@@ -104,7 +104,7 @@ orders. If you want a unit to do nothing, select the "Hold" option for it.
 <h2>{% trans "Expenses" %}</h2>
 {% if not done %}
 <p>{% blocktrans %}Finances are applied in this game. If you want to expend some of your ducats, click on the following link.{% endblocktrans %}</p>
-<p><a href="{% url "expenses" game.slug %}">{% trans "Expenses" %}</a></p>
+<p><a href="{% url 'machiavelli:expenses' game.slug %}">{% trans "Expenses" %}</a></p>
 {% endif %}
 {% if current_expenses %}
 <h3>{% trans "Your expenses for this turn" %}</h3>
@@ -112,7 +112,7 @@ orders. If you want a unit to do nothing, select the "Hold" option for it.
 {% for e in current_expenses %}
 <li id="expense_{{ e.id }}">{{ e }}
 {% if e.confirmed == 0 %}
-(<a href="{% url "undo-expense" game.slug e.id %}">{% trans "Delete" %}</a>)
+(<a href="{% url 'machiavelli:undo_expense' game.slug e.id %}">{% trans "Delete" %}</a>)
 {% endif %}
 </li>
 {% endfor %}
@@ -136,7 +136,7 @@ orders. If you want a unit to do nothing, select the "Hold" option for it.
 </ul>
 {% endif %}
 
-<p><a href="{% url "assassination" game.slug %}">{% trans "Try an assassination" %}</a></p>
+<p><a href="{% url 'machiavelli:assassination' game.slug %}">{% trans "Try an assassination" %}</a></p>
 </div>
 
 {% endif %}
@@ -145,7 +145,7 @@ orders. If you want a unit to do nothing, select the "Hold" option for it.
 
 <div class="action_block">
 <h2>{% trans "Confirm your actions" %}</h2>
-<form action="{% url "confirm-orders" game.slug %}" method="POST" />
+<form action="{% url 'machiavelli:confirm_orders' game.slug %}" method="POST" />
 {% csrf_token %}
 <p>{% blocktrans %}The orders above are saved but <strong>are not confirmed</strong>. If you don't confirm your orders, they will be ignored.{% endblocktrans %}</p>
 <p>{% blocktrans %}To confirm the orders and end your phase, click the "Confirm" button.{% endblocktrans %}</p>
@@ -160,11 +160,14 @@ orders. If you want a unit to do nothing, select the "Hold" option for it.
 {% endblock %}
 
 {% block extra_game %}
-{% if order_form %}
+{% if form %}
 <script>
 	var game_url = "{% url 'machiavelli:show_game' game.slug %}";
 	var delete_text = "{% trans "Delete" %}";
 </script>
-	{{ order_form.media }}
+<script src="{% static 'machiavelli/js/jquery.mousewheel.js' %}" type="text/javascript"></script>
+<script src="{% static 'machiavelli/js/jquery.iviewer.min.js' %}" type="text/javascript"></script>
+<script src="{% static 'machiavelli/js/order_form.js' %}" type="text/javascript"></script>
+{{ form.media }}
 {% endif %}
 {% endblock %}
