--- a/templates/machiavelli/base_game.html
+++ b/templates/machiavelli/base_game.html
@@ -23,6 +23,8 @@
 {% block left_column %}
 <h1>{{ game.title }}</h1>
 
+{% block game_body %}{% endblock %}
+
 <div class="game_info {% if game.fast %}fast{% endif %}">
 <h2><span><a href="{{ game.get_absolute_url }}">{{ game.title }}</a></span>
 {% if not game.started %}
@@ -178,7 +180,7 @@ Finished on {{ finished }} after {{ time }}.{% endblocktrans %}
 
 
 {% if show_log %}
-<p><a href="{% url 'game_log' game.slug %}">{% trans "Campaign log" %}</a></p>
+<p><a href="{% url 'machiavelli:game_log' game.slug %}">{% trans "Campaign log" %}</a></p>
 {% endif %}
 
 {% if map %}
@@ -221,15 +223,5 @@ Finished on {{ finished }} after {{ time }}.{% endblocktrans %}
 <div style="text-align: center">
 <div class="g-plus" data-action="share" data-annotation="bubble" data-height="24"></div>
 </div>
-
-<script type="text/javascript">
-window.___gcfg = {lang: "{{LANGUAGE_CODE}}", parsetags: 'onload'};
-
-	(function() {
-		var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
-		po.src = 'https://apis.google.com/js/plusone.js';
-		var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
-	})();
-</script>
 
 {% endblock %}
