--- a/templates/machiavelli/show_game.html
+++ b/templates/machiavelli/show_game.html
@@ -4,6 +4,20 @@
 {% load avatar_tags %}
 {% load static %}
 
+{% block extra_head %}
+<link rel="stylesheet" href="{% static 'machiavelli/css/jquery.iviewer.css' %}" />
+<script type="text/javascript" src="{% static 'machiavelli/js/jquery.mousewheel.js' %}"></script>
+<script type="text/javascript" src="{% static 'machiavelli/js/jquery.iviewer.min.js' %}"></script>
+<style type="text/css">
+#map {
+    position: relative;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 740px;
+}
+</style>
+{% endblock %}
 
 {% block game_body %}
 <div id="map" class="viewer"></div>
@@ -110,8 +124,6 @@
 
 {% block extra_body %}
 {% block extra_game %}{% endblock %}
-<script src="{% static 'js/jquery.mousewheel.js' %}" type="text/javascript"></script>
-<script src="{% static 'js/jquery.iviewer.min.js' %}" type="text/javascript"></script>
 <script type="text/javascript">
 	$(function() {
 		makeLayout();
